# GaussianSplattingTestBed

./: .gitignore  CMakeLists.txt
shaders/: points.geom.hlsl  points.vert.hlsl  triangle.frag.hlsl  triangle.vert.hlsl
src/: Camera.cpp  Camera.h  GaussianData.cpp  GaussianData.h  PlyLoader.cpp  PlyLoader.h  Vulkan.cpp  Vulkan.h  main.cpp
